--- a/config/config.json
+++ b/config/config.json
@@ -11,10 +11,10 @@
     }
   },
   "server": {
-    "http_port": 3000,
-    "https_port": 3001,
+    "http_port": 13000,
+    "https_port": 13001,
     "ssl": {
-      "enabled": true,
+      "enabled": false,
       "cert": "./ssl/fullchain.pem",
       "key": "./ssl/privkey.pem"
     },
