--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build and Deploy
+name: Build, Publish and Deploy
 
 on:
   push:
@@ -30,6 +30,20 @@ jobs:
         run: |
           docker build -t fur-img-api:latest .
       
+      - name: Login to GitHub Container Registry
+        if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master'
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      
+      - name: Tag and push to GitHub Packages
+        if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master'
+        run: |
+          docker tag fur-img-api:latest ghcr.io/${{ github.repository }}/fur-img-api:latest
+          docker push ghcr.io/${{ github.repository }}/fur-img-api:latest
+      
       - name: Login to Docker Hub
         if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master'
         uses: docker/login-action@v3
@@ -46,6 +60,21 @@ jobs:
           docker tag fur-img-api:latest ${{ secrets.DOCKER_HUB_USERNAME }}/fur-img-api:latest
           docker push ${{ secrets.DOCKER_HUB_USERNAME }}/fur-img-api:latest
         continue-on-error: true
+      
+      - name: Create GitHub Release
+        if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master'
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const tagName = `v${process.env.GITHUB_RUN_NUMBER}`;
+            await github.rest.repos.createRelease({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              tag_name: tagName,
+              name: `Release ${tagName}`,
+              draft: false,
+              prerelease: false
+            });
   
   deploy:
     needs: build
@@ -65,14 +94,29 @@ jobs:
             docker stop fur-img-api || true
             docker rm fur-img-api || true
             
-            # 检查是否配置了Docker Hub用户名
-            if [ -n "${{ secrets.DOCKER_HUB_USERNAME }}" ]; then
-              # 如果配置了，尝试拉取镜像
-              docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/fur-img-api:latest || echo "Failed to pull image from Docker Hub, trying local build..."
+            # 优先尝试从GitHub Packages拉取镜像
+            echo "Trying to pull image from GitHub Packages..."
+            docker pull ghcr.io/${{ github.repository }}/fur-img-api:latest 2>/dev/null
+            
+            if docker images | grep -q "ghcr.io/${{ github.repository }}/fur-img-api:latest"; then
+              # 使用GitHub Packages镜像运行容器
+              echo "Using GitHub Packages image for deployment..."
+              docker run -d \
+                -p 13000:13000 \
+                -p 13001:13001 \
+                -v /path/to/img:/app/img \
+                -v /path/to/config:/app/config \
+                -v /path/to/ssl:/app/ssl \
+                --name fur-img-api \
+                ghcr.io/${{ github.repository }}/fur-img-api:latest
+            elif [ -n "${{ secrets.DOCKER_HUB_USERNAME }}" ]; then
+              # 如果GitHub Packages拉取失败，尝试从Docker Hub拉取
+              echo "Trying to pull image from Docker Hub..."
+              docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/fur-img-api:latest || echo "Failed to pull image from Docker Hub..."
               
-              # 检查镜像是否存在
               if docker images | grep -q "${{ secrets.DOCKER_HUB_USERNAME }}/fur-img-api:latest"; then
-                # 使用拉取的镜像运行容器
+                # 使用Docker Hub镜像运行容器
+                echo "Using Docker Hub image for deployment..."
                 docker run -d \
                   -p 13000:13000 \
                   -p 13001:13001 \
@@ -82,9 +126,9 @@ jobs:
                   --name fur-img-api \
                   ${{ secrets.DOCKER_HUB_USERNAME }}/fur-img-api:latest
               else
-                echo "Docker image not found, skipping deployment..."
+                echo "No valid Docker images found, skipping deployment..."
               fi
             else
-              echo "Docker Hub username not configured, skipping deployment..."
+              echo "No Docker Hub username configured, skipping deployment..."
             fi
         continue-on-error: true
