--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "https": "^1.0.0",
     "lru-cache": "^11.1.0",
     "mime-types": "^2.1.35",
+    "multer": "^2.0.2",
     "path": "^0.12.7",
     "redis": "^4.6.0"
   },
